# Smart-Factory-Sim

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
include/: FactoryController.h  Machine.h  MachineController.h  MqttClientWrapper.h  SensorMessage.h  main.h
src/: FactoryController.cpp  FactoryController.h  Machine.cpp  MachineController.cpp  MqttClientWrapper.cpp  MqttClientWrapper.h  main.cpp
tests/: CMakeLists.txt  FactoryControllerTest.cpp  FactoryPersistenceTest.cpp  MachineControllerTest.cpp  MachineStateTest.cpp  MachineTest.cpp  TemperatureSensorTest.cpp  VibrationSensorTest.cpp
